k8s/messaging-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
        - name: messaging-service
          image: dbozhkov/messaging-service:latest
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8086
  type: ClusterIP
