k8s/review-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: dbozhkov/review-service:latest
          ports:
            - containerPort: 8446
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  selector:
    app: review-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8446
  type: ClusterIP
