k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paylate-ingress
spec:
#  tls:
#    - hosts:
#        - paylate.com
#        - admin-service.paylate.com
#        - cart-service.paylate.com
#        - messaging-service.paylate.com
#        - order-service.paylate.com
#        - payment-service.paylate.com
#        - product-service.paylate.com
#        - review-service.paylate.com
#      secretName: frontend-tls-secret
  rules:
    - host: admin-service.paylate.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
    - host: cart-service.paylate.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80
    - host: messaging-service.paylate.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: messaging-service
                port:
                  number: 80
    - host: order-service.paylate.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
    - host: payment-service.paylate.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
    - host: product-service.paylate.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
    - host: review-service.paylate.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 80
    - host: paylate.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
